<resources>
    <string name="app_name">My Job Connect</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

        <!-- Strings related to login -->
        <string name="prompt_email">Email</string>
        <string name="prompt_password">Password</string>
        <string name="prompt_fname">First name</string>
        <string name="prompt_lname">Last name</string>
        <string name="prompt_pnumber">Phone Number</string>
        <string name="prompt_company">Company Name</string>
        <string name="action_register">Register</string>
        <string name="action_sign_in">Sign in</string>
        <string name="action_sign_in_short">Sign in</string>

        <string name="error_invalid_email">This email address is invalid</string>
        <string name="error_invalid_password">This password is too short</string>
        <string name="error_incorrect_password">This password is incorrect</string>
        <string name="error_field_required">This field is required</string>

        <!-- Content Description -->
        <string name="desc_list_item_icon">Item Icon</string>
        <string name="title_activity_product_details">ProductDetailsActivity</string>
        <string name="title_section1">Section 1</string>
        <string name="title_section2">Section 2</string>
        <string name="title_section3">Section 3</string>


        <string name="action_example">Example action</string>

        <string name="toolbar_title_home">My Job Connect</string>
        <string name="toolbar_title_explore">Explore</string>
        <string name="other_activity">Other Activity</string>

        <string name="nav_drawer_item_home">Home</string>
        <string name="nav_drawer_item_explore">Explore</string>
        <string name="nav_drawer_help_and_feedback"><![CDATA[Help & Feddback]]></string>
        <string name="nav_drawer_about">About</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
        <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
        <string name="tools_text_account_information_username">Username</string>
        <string name="tools_text_account_information_email">user@amil.com</string>


        <string name="typeface_roboto_regular">Roboto-Regular</string>
        <string name="typeface_roboto_medium">Roboto-Medium</string>



</resources>
